source/assets/styles/pages/index/_tour_section.scss
$breakpoint-tour-3-slides: 600px;
$breakpoint-tour-4-slides: 800px;

.index .tour-section {
  .container {
    padding: 0 0 3rem 0;
  }

  .features {
    margin: 4rem 0 2rem 0;
    fill: #f6c636;

    .flickity-page-dots {
      bottom: -50px;
    }

    .flickity-prev-next-button {
      opacity: .5;

      &:hover {
        opacity: 1;
      }
    }
  }

  .feature {
    width: 50%;
    text-align: center;

    p {
      max-width: 10em;
      margin: auto;
    }

    .cls-1 {
      fill: $color-primary;
    }

    @media (max-width: $screen-md-max) {
      @include transform(scale(0.9));
    }
  }

  @media only screen and (min-width: $breakpoint-tour-3-slides) {
    .feature {
      width: 33%;
    }
  }

  @media only screen and (max-width: #{$breakpoint-tour-4-slides - 1}) {
    .features {
      .flickity-prev-next-button {
        @include transform(scale(0.75));
        top: auto;
        bottom: -88px;

        &.previous {
          left: auto;
          right: calc(50% + 4rem);
        }

        &.next {
          right: auto;
          left: calc(50% + 4rem);
        }
      }
    }
  }

  @media only screen and (min-width: $breakpoint-tour-4-slides) {
    .features {
      @include margin(null 6rem); // Room for PREV NEXT buttons

      .flickity-prev-next-button {
        top: 60%;

        &.previous {
          left: -4rem;
        }

        &.next {
          right: -4rem;
        }
      }
    }

    .feature {
      width: 25%;
    }
  }
}

